# ice-cream-dataops

./: .gitignore  CLAUDE.md  README.md  cdf.toml  icecreamfactory_openapi_spec.json  pyproject.toml
.github/workflows/: deploy.yaml
ice-cream-dataops/: build_info.test.yaml  config.prod.yaml  config.test.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/transformations/: create_asset_hierarchy.schedule.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/workflows/: wf_icapi_data_pipeline.WorkFlow.yaml  wf_icapi_data_pipeline.WorkflowVersion.yaml
ice-cream-dataops/modules/bootcamp/use_cases/oee/auth/: data_pipeline_oee.Group.yaml
ice-cream-dataops/modules/bootcamp/use_cases/oee/data_sets/: data_sets.DataSet.yaml
reference/: extract_website_to_markdown.py  spark_sql_functions.md  write_sql_queries.md  yaml_reference_library.md
src/: assign_apps_to_groups.py  entra_id_helper.py  requirements_entra.txt
src/cdf_bootcamp/: __init__.py
src/examples/: entra_examples.py
